# Neo3000

./: .gitignore  AGENTS.md  CATALYTIC.md  CHANGELOG.md  NEO3000.md  README.md  ROADMAP.md  TASKS.md
common/: arg.cpp  common.h  neo-trace-wddm.ps1  sampling.cpp  sampling.h  test-neo-trace-wddm.ps1
common/neo-compute-trace-tests/: CMakeLists.txt  trace-disabled-test.cpp  trace-test.cpp  verify.py
docs/: CATALYTIC_RUNTIME_ROADMAP.md
include/: llama.h
lab/: BASELINE_PROTOCOL.md  CHECKPOINT.md  EVALUATOR.json  EVALUATOR.lock.json  GOAL.md  ck0_balanced_opaque_causal_adjudication_1.md  ck0_balanced_opaque_five_support_two_worker_synthesis_probe_1.json  ck0_balanced_opaque_five_support_two_worker_synthesis_probe_adjudication_1.json  ck0_balanced_opaque_five_support_two_worker_synthesis_task_suitability_decision_1.json  ck0_balanced_opaque_parent_dependence_cross_binding_asymmetry_audit_1.json  ck0_balanced_opaque_rank_head_counterfactual_1.json  ck0_balanced_opaque_rank_head_v2_binding_2_parent_dependence_1.json  ck0_balanced_opaque_rank_head_v2_binding_2_parent_dependence_forensic_recovery_1.json  ck0_balanced_opaque_rank_head_v2_cross_binding_adjudication_1.json  ck0_balanced_opaque_rank_head_v2_evidence_custody_incident_r2.json  ck0_balanced_opaque_rank_head_v2_joint_condition_intersection_replication_1.json  ck0_balanced_opaque_rank_head_v2_joint_condition_intersection_replication_adjudication_1.json  ck0_balanced_opaque_rank_head_v2_position_seed_crossover_1.json  ck0_balanced_opaque_rank_head_v2_position_seed_crossover_adjudication_1.json  (+36 more)
src/: llama-context.cpp  (+2 more)
(+259 files in other folders)
